# ClipUUID

./: .gitignore  .gitmodules  CMakeLists.txt  Main.qml  README.md  clipuuid.cpp  clipuuid.h  inputhandler.cpp  inputhandler.h  main.cpp  resources.qrc  uuidgenorator.cpp  uuidgenorator.h
src/: Main.qml  aboutqtdialog.cpp  aboutqtdialog.h  clipuuid.cpp  clipuuid.h  inputhandler.cpp  main.cpp  uuidgenorator.cpp
